# ChipMATE

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
chipmate/: __init__.py  backends.py  cli.py  cross_verify.py  feedback.py  inference.py  prompts.py
examples/: single_problem.py  verilogeval_v2.jsonl
